--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-streamlit
-pandas
-numpy
-seaborn
+streamlit==1.24.0
+pandas==1.4.4
+numpy==1.23.5
+seaborn==0.11.2
 matplotlib.pyplot
 pickle
-sklearn.preprocessing
+sklearn==0.0.posts
+scikit-learn==1.0.2
